Fixed blurry legend button Fixed blurry legend button

--- a/style.css
+++ b/style.css
@@ -236,6 +236,7 @@ select:focus-visible {
   right: -69px;
   padding: 13px 16px;
   transform: translateY(-50%) rotate(-90deg);
+  transform-origin: 50% calc(50% + .4px);
   transition: background-color .175s ease;
   border: 0;
   border-radius: 0 0 8px 8px;
